--- a/frontend/networking-app/src/index.css
+++ b/frontend/networking-app/src/index.css
@@ -1,3 +1,20 @@
+@font-face {
+    font-family: Open-sans;
+    src: url('../assets/fonts/OpenSans-VariableFont_wdth\,wght.ttf');
+}
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+body {
+    font-family: Open-sans;
+    @apply bg-slate-800 text-slate-50 font-sans;
+}
+
+.custom-bullet::before {
+    content: '💼';
+    padding-right: 2px;
+}
