--- a/frontend/networking-app/src/signup.css
+++ b/frontend/networking-app/src/signup.css
@@ -29,5 +29,5 @@ label {
 }
 
 .registerBtn {
-    @apply flex justify-center px-4 py-4 rounded-md border-2 bg-gradient-to-r from-[#06beb6] to-[#48b1bf] w-full font-bold mt-4;
+    @apply relative flex justify-center px-4 py-4 rounded-md border-2 bg-gradient-to-r from-[#06beb6] to-[#48b1bf] w-full font-bold mt-4;
 }
