--- a/frontend/networking-app/src/sidebar.css
+++ b/frontend/networking-app/src/sidebar.css
@@ -1,5 +1,5 @@
 .sidebar-container {
-    @apply bg-slate-900 h-screen w-3/4 fixed top-0 right-0 bottom-0 transition-transform duration-150 z-50 flex flex-col;
+    @apply bg-slate-900 h-screen w-3/4 sm:w-2/4 xl:w-1/4 fixed top-0 right-0 bottom-0 transition-transform duration-150 z-50 flex flex-col;
 }
 
 .sidebar-backdrop {
@@ -8,7 +8,7 @@
 
 #themeToggler {
     @apply flex gap-4 p-2 bg-slate-600 rounded-md relative;
-    @apply before:bg-slate-900 before:absolute before:w-1/2 before:h-auto before:m-[2px] before:rounded-md before:top-0 before:bottom-0 before:right-0;
+    @apply before:bg-slate-900 before:absolute before:w-1/2 before:transition-all before:duration-75 before:h-auto before:m-[2px] before:rounded-md before:top-0 before:bottom-0;
 }
 
 #sidebarHeader {
@@ -23,6 +23,6 @@
     @apply mt-auto;
 }
 
-.active {
+.sidebar-container li:has(a.active) {
     @apply bg-gradient-to-r from-[#06beb6] to-[#48b1bf];
 }
