backend, frontend: darkmode and store persist with localstorage

--- a/frontend/networking-app/src/index.css
+++ b/frontend/networking-app/src/index.css
@@ -11,7 +11,7 @@
 
 body {
     font-family: Open-sans;
-    @apply bg-slate-800 text-slate-50 font-sans;
+    @apply bg-slate-50 dark:bg-slate-800 text-slate-800  dark:text-slate-50 font-sans transition-colors duration-150 ease-in-out;
 }
 
 .custom-bullet::before {
