--- a/frontend/networking-app/src/index.css
+++ b/frontend/networking-app/src/index.css
@@ -18,3 +18,13 @@ body {
     content: '💼';
     padding-right: 2px;
 }
+
+.ToasterContainer {
+    inset: 0 !important;
+    height: 100vh !important;
+    width: 100% !important;
+}
+
+input[type="search"]::-webkit-search-cancel-button {
+    @apply text-slate-50
+}
