--- a/frontend/networking-app/src/editingModal.css
+++ b/frontend/networking-app/src/editingModal.css
@@ -1,5 +1,5 @@
 .input-edit {
-    @apply py-2 border-b-2 outline-none bg-transparent dark:border-slate-600;
+    @apply py-2 w-full border-b-2 outline-none bg-transparent dark:border-slate-600;
 }
 .input-edit:focus,
 .input-edit:not(:empty) {
@@ -7,5 +7,13 @@
  }
 
  .updateBtn {
-    @apply relative flex justify-center px-4 py-4 rounded-md border-2 text-slate-50 bg-gradient-to-r from-[#06beb6] to-[#48b1bf] w-full font-bold mt-4;
+    @apply relative flex justify-center px-4 py-4 rounded-md border-2 text-slate-50 bg-gradient-to-r from-[#06beb6] to-[#48b1bf] w-full font-bold my-8;
+ }
+
+ #modalGrid {
+    grid-template-rows: auto 1fr auto;
+ }
+
+ .textarea-edit {
+    @apply border-2 p-2 resize-none outline-none bg-transparent h-64 rounded-md dark:border-slate-600;
  }
