--- a/frontend/networking-app/src/sidebar.css
+++ b/frontend/networking-app/src/sidebar.css
@@ -1,5 +1,5 @@
 .sidebar-container {
-    @apply bg-white dark:bg-slate-900 h-screen w-3/4 sm:w-2/4 xl:w-1/4 fixed top-0 right-0 bottom-0 transition-transform duration-150 z-50 flex flex-col;
+    @apply bg-white dark:bg-slate-900 h-full w-3/4 sm:w-2/4 xl:w-1/4 fixed top-0 right-0 bottom-0 transition-transform duration-150 z-50 flex flex-col;
 }
 
 .sidebar-backdrop {
